static/css/style.css
body {
    background: white;
    width: 100%;
    overflow-x: hidden;
}

.card-title {
    font-family: 'Nixie One';
    font-weight: bold;
    margin-bottom: 0px;
    color: #0b203a;
}

@media only screen and (min-width: 800px) {
    .center-block {
        top: 50%;
        left: 50%;
        transform: translate3d(-50%, -50%, 0);
        position: absolute;
    }

    .ah-title {
        font-size: 100px;
        font-weight: bold;
        font-family: 'Dancing Script', cursive;
    }

    #mobile {
        display: none;
    }

}

@media only screen and (max-width: 800px) {
    .center-block {
        top: 50%;
        transform: translate3d(0%, -50%, 0);
        position: absolute;
    }

    .container {
        width: 100%;
        padding-left: 5px;
        padding-right: 5px;
    }

    .ah-title {
        font-size: 70px;
        font-weight: bold;
        font-family: 'Dancing Script', cursive;
    }

    #full-width {
        display: none;
    }
}

.card {
    top: 50%;
    left: 50%;
    transform: translate3d(-50%, -50%, 0);
    margin-bottom: 20px;
    border: 2px solid cadetblue;
}

h4 {
    font-size: 2vw;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
    line-height: 1;
}

.icons {
    color: cadetblue;
    font-size: 30px;
    padding: 10px;
}

.icons:hover {
    color: #0b203a;
}

a:link, a:visited {
    text-decoration: none;
}

.hljs {
    margin-bottom: -40px;
}

h3 {
    font-size: 1.5rem;
}

.form-control {
    border: 2px solid cadetblue;
}

.btn-primary {
    background-color: cadetblue;
    border-color: cadetblue;
    cursor: pointer;
    color: #0b203a;
    font-weight: bolder;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
    color: #fff !important;
    background-color: #0b203a;
    border-color: #0b203a;
}

.index .card:hover, .index .card:hover .card-title {
    color: white;
    background-color: #0b203a;
    border-color: #0b203a;
}

.form-control:focus {
    border-color: #0b203a;
}

.dropdown-menu {
    position: initial;
    left: 0;
    width: 100%;
    border: 2px solid cadetblue;
    float: none;
    font-size: 30px;
    cursor: pointer;
}

.dropdown-item {
    font-size: 18px;
    font-family: 'Ledger', serif;
}

.dropdown-item:hover {
    color: #fff !important;
    background-color: #0b203a;
    border-color: #0b203a;
}

